minor bugfix update (possibly just the average bg stats widget flicker)

--- a/example/example.css
+++ b/example/example.css
@@ -262,6 +262,9 @@ svg.hidden {
   stroke-width: 2px;
   stroke-dasharray: 3,5;
 }
+.d3-stats .d3-stats-image.hidden {
+  display: none;
+}
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
